# metadataviewer

./: CMakeLists.txt  Command.h  Entry.cpp  Extensions.h  FileInformationGeneral.cpp  FileInformationGeneral.h  FileSize.cpp  FileSize.h  FileType.cpp  FileType.h  Headers.h  Makefile  MetaData  README.md
